docs/api/qiskit/0.36/circuit_library.md
<span id="qiskit-circuit-library" />

# Circuit Library[¶](#module-qiskit.circuit.library "Permalink to this headline")

## Circuit Library ([`qiskit.circuit.library`](#module-qiskit.circuit.library "qiskit.circuit.library"))[¶](#circuit-library-qiskit-circuit-library "Permalink to this headline")

The circuit library is a collection of well-studied and valuable circuits, directives, and gates. We call them valuable for different reasons, for instance they can serve as building blocks for algorithms or they are circuits that we think are hard to simulate classically.

Each element can be plugged into a circuit using the [`QuantumCircuit.append()`](qiskit.circuit.QuantumCircuit#append "qiskit.circuit.QuantumCircuit.append") method and so the circuit library allows users to program at higher levels of abstraction. For example, to append a multi-controlled CNOT:

```python
from qiskit.circuit.library import MCXGate
gate = MCXGate(4)

from qiskit import QuantumCircuit
circuit = QuantumCircuit(5)
circuit.append(gate, [0, 1, 4, 2, 3])
circuit.draw('mpl')
```

![../\_images/circuit\_library\_0\_0.png](/images/api/qiskit/0.36/circuit_library_0_0.png)

The library is organized in several sections.

### Standard gates[¶](#standard-gates "Permalink to this headline")

These operations are reversible unitary gates and they all subclass [`Gate`](qiskit.circuit.Gate "qiskit.circuit.Gate"). As a consequence, they all have the methods [`to_matrix()`](qiskit.circuit.Gate#to_matrix "qiskit.circuit.Gate.to_matrix"), [`power()`](qiskit.circuit.Gate#power "qiskit.circuit.Gate.power"), and [`control()`](qiskit.circuit.Gate#control "qiskit.circuit.Gate.control"), which we can generally only apply to unitary operations.

For example:

```python
from qiskit.circuit.library import XGate
gate = XGate()
print(gate.to_matrix())             # X gate
print(gate.power(1/2).to_matrix())  # √X gate
print(gate.control(1).to_matrix())  # CX (controlled X) gate
```

```python
[[0.+0.j 1.+0.j]
 [1.+0.j 0.+0.j]]
[[0.5+0.5j 0.5-0.5j]
 [0.5-0.5j 0.5+0.5j]]
[[1.+0.j 0.+0.j 0.+0.j 0.+0.j]
 [0.+0.j 0.+0.j 0.+0.j 1.+0.j]
 [0.+0.j 0.+0.j 1.+0.j 0.+0.j]
 [0.+0.j 1.+0.j 0.+0.j 0.+0.j]]
```

|                                                                                                                       |                                                                      |
| --------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------- |
| [`C3XGate`](qiskit.circuit.library.C3XGate "qiskit.circuit.library.C3XGate")(\[label, ctrl\_state])                   | The X gate controlled on 3 qubits.                                   |
| [`C3SXGate`](qiskit.circuit.library.C3SXGate "qiskit.circuit.library.C3SXGate")(\[label, ctrl\_state])                | The 3-qubit controlled sqrt-X gate.                                  |
| [`C4XGate`](qiskit.circuit.library.C4XGate "qiskit.circuit.library.C4XGate")(\[label, ctrl\_state])                   | The 4-qubit controlled X gate.                                       |
| [`CCXGate`](qiskit.circuit.library.CCXGate "qiskit.circuit.library.CCXGate")(\[label, ctrl\_state])                   | CCX gate, also known as Toffoli gate.                                |
| [`DCXGate`](qiskit.circuit.library.DCXGate "qiskit.circuit.library.DCXGate")()                                        | Double-CNOT gate.                                                    |
| [`CHGate`](qiskit.circuit.library.CHGate "qiskit.circuit.library.CHGate")(\[label, ctrl\_state])                      | Controlled-Hadamard gate.                                            |
| [`CPhaseGate`](qiskit.circuit.library.CPhaseGate "qiskit.circuit.library.CPhaseGate")(theta\[, label, ctrl\_state])   | Controlled-Phase gate.                                               |
| [`CRXGate`](qiskit.circuit.library.CRXGate "qiskit.circuit.library.CRXGate")(theta\[, label, ctrl\_state])            | Controlled-RX gate.                                                  |
| [`CRYGate`](qiskit.circuit.library.CRYGate "qiskit.circuit.library.CRYGate")(theta\[, label, ctrl\_state])            | Controlled-RY gate.                                                  |
| [`CRZGate`](qiskit.circuit.library.CRZGate "qiskit.circuit.library.CRZGate")(theta\[, label, ctrl\_state])            | Controlled-RZ gate.                                                  |
| [`CSwapGate`](qiskit.circuit.library.CSwapGate "qiskit.circuit.library.CSwapGate")(\[label, ctrl\_state])             | Controlled-SWAP gate, also known as the Fredkin gate.                |
| [`CSXGate`](qiskit.circuit.library.CSXGate "qiskit.circuit.library.CSXGate")(\[label, ctrl\_state])                   | Controlled-√X gate.                                                  |
| [`CUGate`](qiskit.circuit.library.CUGate "qiskit.circuit.library.CUGate")(theta, phi, lam, gamma\[, label, ...])      | Controlled-U gate (4-parameter two-qubit gate).                      |
| [`CU1Gate`](qiskit.circuit.library.CU1Gate "qiskit.circuit.library.CU1Gate")(theta\[, label, ctrl\_state])            | Controlled-U1 gate.                                                  |
| [`CU3Gate`](qiskit.circuit.library.CU3Gate "qiskit.circuit.library.CU3Gate")(theta, phi, lam\[, label, ctrl\_state])  | Controlled-U3 gate (3-parameter two-qubit gate).                     |
| [`CXGate`](qiskit.circuit.library.CXGate "qiskit.circuit.library.CXGate")(\[label, ctrl\_state])                      | Controlled-X gate.                                                   |
| [`CYGate`](qiskit.circuit.library.CYGate "qiskit.circuit.library.CYGate")(\[label, ctrl\_state])                      | Controlled-Y gate.                                                   |
| [`CZGate`](qiskit.circuit.library.CZGate "qiskit.circuit.library.CZGate")(\[label, ctrl\_state])                      | Controlled-Z gate.                                                   |
| [`HGate`](qiskit.circuit.library.HGate "qiskit.circuit.library.HGate")(\[label])                                      | Single-qubit Hadamard gate.                                          |
| [`IGate`](qiskit.circuit.library.IGate "qiskit.circuit.library.IGate")(\[label])                                      | Identity gate.                                                       |
| [`MSGate`](qiskit.circuit.library.MSGate "qiskit.circuit.library.MSGate")(num\_qubits, theta\[, label])               | MSGate has been deprecated.                                          |
| [`PhaseGate`](qiskit.circuit.library.PhaseGate "qiskit.circuit.library.PhaseGate")(theta\[, label])                   | Single-qubit rotation about the Z axis.                              |
| [`RCCXGate`](qiskit.circuit.library.RCCXGate "qiskit.circuit.library.RCCXGate")(\[label])                             | The simplified Toffoli gate, also referred to as Margolus gate.      |
| [`RC3XGate`](qiskit.circuit.library.RC3XGate "qiskit.circuit.library.RC3XGate")(\[label])                             | The simplified 3-controlled Toffoli gate.                            |
| [`RGate`](qiskit.circuit.library.RGate "qiskit.circuit.library.RGate")(theta, phi\[, label])                          | Rotation θ around the cos(φ)x + sin(φ)y axis.                        |
| [`RXGate`](qiskit.circuit.library.RXGate "qiskit.circuit.library.RXGate")(theta\[, label])                            | Single-qubit rotation about the X axis.                              |
| [`RXXGate`](qiskit.circuit.library.RXXGate "qiskit.circuit.library.RXXGate")(theta\[, label])                         | A parametric 2-qubit $X \otimes X$ interaction (rotation about XX).  |
| [`RYGate`](qiskit.circuit.library.RYGate "qiskit.circuit.library.RYGate")(theta\[, label])                            | Single-qubit rotation about the Y axis.                              |
| [`RYYGate`](qiskit.circuit.library.RYYGate "qiskit.circuit.library.RYYGate")(theta\[, label])                         | A parametric 2-qubit $Y \otimes Y$ interaction (rotation about YY).  |
| [`RZGate`](qiskit.circuit.library.RZGate "qiskit.circuit.library.RZGate")(phi\[, label])                              | Single-qubit rotation about the Z axis.                              |
| [`RZZGate`](qiskit.circuit.library.RZZGate "qiskit.circuit.library.RZZGate")(theta\[, label])                         | A parametric 2-qubit $Z \otimes Z$ interaction (rotation about ZZ).  |
| [`RZXGate`](qiskit.circuit.library.RZXGate "qiskit.circuit.library.RZXGate")(theta\[, label])                         | A parametric 2-qubit $Z \otimes X$ interaction (rotation about ZX).  |
| [`XXPlusYYGate`](qiskit.circuit.library.XXPlusYYGate "qiskit.circuit.library.XXPlusYYGate")(theta\[, beta, label])    | XX+YY interaction gate.                                              |
| [`XXMinusYYGate`](qiskit.circuit.library.XXMinusYYGate "qiskit.circuit.library.XXMinusYYGate")(theta\[, beta, label]) | XX-YY interaction gate.                                              |
| [`ECRGate`](qiskit.circuit.library.ECRGate "qiskit.circuit.library.ECRGate")()                                        | An echoed RZX(pi/2) gate implemented using RZX(pi/4) and RZX(-pi/4). |
| [`SGate`](qiskit.circuit.library.SGate "qiskit.circuit.library.SGate")(\[label])                                      | Single qubit S gate (Z\*\*0.5).                                      |
| [`SdgGate`](qiskit.circuit.library.SdgGate "qiskit.circuit.library.SdgGate")(\[label])                                | Single qubit S-adjoint gate (\~Z\*\*0.5).                            |
| [`SwapGate`](qiskit.circuit.library.SwapGate "qiskit.circuit.library.SwapGate")(\[label])                             | The SWAP gate.                                                       |
| [`iSwapGate`](qiskit.circuit.library.iSwapGate "qiskit.circuit.library.iSwapGate")(\[label])                          | iSWAP gate.                                                          |
| [`SXGate`](qiskit.circuit.library.SXGate "qiskit.circuit.library.SXGate")(\[label])                                   | The single-qubit Sqrt(X) gate ($\sqrt{X}$).                          |
| [`SXdgGate`](qiskit.circuit.library.SXdgGate "qiskit.circuit.library.SXdgGate")(\[label])                             | The inverse single-qubit Sqrt(X) gate.                               |
| [`TGate`](qiskit.circuit.library.TGate "qiskit.circuit.library.TGate")(\[label])                                      | Single qubit T gate (Z\*\*0.25).                                     |
| [`TdgGate`](qiskit.circuit.library.TdgGate "qiskit.circuit.library.TdgGate")(\[label])                                | Single qubit T-adjoint gate (\~Z\*\*0.25).                           |
| [`UGate`](qiskit.circuit.library.UGate "qiskit.circuit.library.UGate")(theta, phi, lam\[, label])                     | Generic single-qubit rotation gate with 3 Euler angles.              |
| [`U1Gate`](qiskit.circuit.library.U1Gate "qiskit.circuit.library.U1Gate")(theta\[, label])                            | Single-qubit rotation about the Z axis.                              |
| [`U2Gate`](qiskit.circuit.library.U2Gate "qiskit.circuit.library.U2Gate")(phi, lam\[, label])                         | Single-qubit rotation about the X+Z axis.                            |
| [`U3Gate`](qiskit.circuit.library.U3Gate "qiskit.circuit.library.U3Gate")(theta, phi, lam\[, label])                  | Generic single-qubit rotation gate with 3 Euler angles.              |
| [`XGate`](qiskit.circuit.library.XGate "qiskit.circuit.library.XGate")(\[label])                                      | The single-qubit Pauli-X gate ($\sigma_x$).                          |
| [`YGate`](qiskit.circuit.library.YGate "qiskit.circuit.library.YGate")(\[label])                                      | The single-qubit Pauli-Y gate ($\sigma_y$).                          |
| [`ZGate`](qiskit.circuit.library.ZGate "qiskit.circuit.library.ZGate")(\[label])                                      | The single-qubit Pauli-Z gate ($\sigma_z$).                          |

### Standard Directives[¶](#standard-directives "Permalink to this headline")

Directives are operations to the quantum stack that are meant to be interpreted by the backend or the transpiler. In general, the transpiler or backend might optionally ignore them if there is no implementation for them.

|                                                                                           |                      |
| ----------------------------------------------------------------------------------------- | -------------------- |
| [`Barrier`](qiskit.circuit.library.Barrier "qiskit.circuit.library.Barrier")(num\_qubits) | Barrier instruction. |

### Standard Operations[¶](#standard-operations "Permalink to this headline")

Operations are non-reversible changes in the quantum state of the circuit.

|                                                                                |                                                 |
| ------------------------------------------------------------------------------ | ----------------------------------------------- |
| [`Measure`](qiskit.circuit.library.Measure "qiskit.circuit.library.Measure")() | Quantum measurement in the computational basis. |
| [`Reset`](qiskit.circuit.library.Reset "qiskit.circuit.library.Reset")()       | Qubit reset.                                    |

### Generalized Gates[¶](#generalized-gates "Permalink to this headline")

These “gates” (many are [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") subclasses) allow to set the amount of qubits involved at instantiation time.

```python
from qiskit.circuit.library import Diagonal

diagonal = Diagonal([1, 1])
print(diagonal.num_qubits)

diagonal = Diagonal([1, 1, 1, 1])
print(diagonal.num_qubits)
```

```python
1
2
```

|                                                                                                                                    |                                                                                         |   |                                     |
| ---------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------- | - | ----------------------------------- |
| [`Diagonal`](qiskit.circuit.library.Diagonal "qiskit.circuit.library.Diagonal")(diag)                                              | Diagonal circuit.                                                                       |   |                                     |
| [`MCMT`](qiskit.circuit.library.MCMT "qiskit.circuit.library.MCMT")(gate, num\_ctrl\_qubits, num\_target\_qubits)                  | The multi-controlled multi-target gate, for an arbitrary singly controlled target gate. |   |                                     |
| [`MCMTVChain`](qiskit.circuit.library.MCMTVChain "qiskit.circuit.library.MCMTVChain")(gate, num\_ctrl\_qubits, ...\[, label])      | The MCMT implementation using the CCX V-chain.                                          |   |                                     |
| [`Permutation`](qiskit.circuit.library.Permutation "qiskit.circuit.library.Permutation")(num\_qubits\[, pattern, seed])            | An n\_qubit circuit that permutes qubits.                                               |   |                                     |
| [`GMS`](qiskit.circuit.library.GMS "qiskit.circuit.library.GMS")(num\_qubits, theta)                                               | Global Mølmer–Sørensen gate.                                                            |   |                                     |
| [`GR`](qiskit.circuit.library.GR "qiskit.circuit.library.GR")(num\_qubits, theta, phi)                                             | Global R gate.                                                                          |   |                                     |
| [`GRX`](qiskit.circuit.library.GRX "qiskit.circuit.library.GRX")(num\_qubits, theta)                                               | Global RX gate.                                                                         |   |                                     |
| [`GRY`](qiskit.circuit.library.GRY "qiskit.circuit.library.GRY")(num\_qubits, theta)                                               | Global RY gate.                                                                         |   |                                     |
| [`GRZ`](qiskit.circuit.library.GRZ "qiskit.circuit.library.GRZ")(num\_qubits, phi)                                                 | Global RZ gate.                                                                         |   |                                     |
| [`MCPhaseGate`](qiskit.circuit.library.MCPhaseGate "qiskit.circuit.library.MCPhaseGate")(lam, num\_ctrl\_qubits\[, label])         | Multi-controlled-Phase gate.                                                            |   |                                     |
| [`MCXGate`](qiskit.circuit.library.MCXGate "qiskit.circuit.library.MCXGate")(num\_ctrl\_qubits\[, label, ...])                     | The general, multi-controlled X gate.                                                   |   |                                     |
| [`MCXGrayCode`](qiskit.circuit.library.MCXGrayCode "qiskit.circuit.library.MCXGrayCode")(num\_ctrl\_qubits\[, label, ctrl\_state]) | Implement the multi-controlled X gate using the Gray code.                              |   |                                     |
| [`MCXRecursive`](qiskit.circuit.library.MCXRecursive "qiskit.circuit.library.MCXRecursive")(num\_ctrl\_qubits\[, label, ...])      | Implement the multi-controlled X gate using recursion.                                  |   |                                     |
| [`MCXVChain`](qiskit.circuit.library.MCXVChain "qiskit.circuit.library.MCXVChain")(num\_ctrl\_qubits\[, dirty\_ancillas, ...])     | Implement the multi-controlled X gate using a V-chain of CX gates.                      |   |                                     |
| [`RVGate`](qiskit.circuit.library.RVGate "qiskit.circuit.library.RVGate")(v\_x, v\_y, v\_z\[, basis])                              | Rotation around arbitrary rotation axis $v$ where \$                                    | v | \$ is angle of rotation in radians. |
| [`PauliGate`](qiskit.circuit.library.PauliGate "qiskit.circuit.library.PauliGate")(label)                                          | A multi-qubit Pauli gate.                                                               |   |                                     |
| [`LinearFunction`](qiskit.circuit.library.LinearFunction "qiskit.circuit.library.LinearFunction")(linear\[, validate\_input])      | A linear reversible circuit on n qubits.                                                |   |                                     |

### Boolean Logic Circuits[¶](#boolean-logic-circuits "Permalink to this headline")

These are [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") subclasses that implement boolean logic operations, such as the logical or of a set of qubit states.

|                                                                                                              |                                                                                                |
| ------------------------------------------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------- |
| [`AND`](qiskit.circuit.library.AND "qiskit.circuit.library.AND")(num\_variable\_qubits\[, flags, mcx\_mode]) | A circuit implementing the logical AND operation on a number of qubits.                        |
| [`OR`](qiskit.circuit.library.OR "qiskit.circuit.library.OR")(num\_variable\_qubits\[, flags, mcx\_mode])    | A circuit implementing the logical OR operation on a number of qubits.                         |
| [`XOR`](qiskit.circuit.library.XOR "qiskit.circuit.library.XOR")(num\_qubits\[, amount, seed])               | An n\_qubit circuit for bitwise xor-ing the input with some integer `amount`.                  |
| [`InnerProduct`](qiskit.circuit.library.InnerProduct "qiskit.circuit.library.InnerProduct")(num\_qubits)     | A 2n-qubit Boolean function that computes the inner product of two n-qubit vectors over $F_2$. |

### Basis Change Circuits[¶](#basis-change-circuits "Permalink to this headline")

These circuits allow basis transformations of the qubit states. For example, in the case of the Quantum Fourier Transform (QFT), it transforms between the computational basis and the Fourier basis.

|                                                                                                              |                                    |
| ------------------------------------------------------------------------------------------------------------ | ---------------------------------- |
| [`QFT`](qiskit.circuit.library.QFT "qiskit.circuit.library.QFT")(\[num\_qubits, approximation\_degree, ...]) | Quantum Fourier Transform Circuit. |

### Arithmetic Circuits[¶](#arithmetic-circuits "Permalink to this headline")

These [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")s perform classical arithmetic, such as addition or multiplication.

#### Amplitude Functions[¶](#amplitude-functions "Permalink to this headline")

|                                                                                                                                                       |                                                                           |
| ----------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------- |
| [`LinearAmplitudeFunction`](qiskit.circuit.library.LinearAmplitudeFunction "qiskit.circuit.library.LinearAmplitudeFunction")(num\_state\_qubits, ...) | A circuit implementing a (piecewise) linear function on qubit amplitudes. |

#### Functional Pauli Rotations[¶](#functional-pauli-rotations "Permalink to this headline")

|                                                                                                                                                                    |                                                         |
| ------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------- |
| [`FunctionalPauliRotations`](qiskit.circuit.library.FunctionalPauliRotations "qiskit.circuit.library.FunctionalPauliRotations")(\[num\_state\_qubits, ...])        | Base class for functional Pauli rotations.              |
| [`LinearPauliRotations`](qiskit.circuit.library.LinearPauliRotations "qiskit.circuit.library.LinearPauliRotations")(\[num\_state\_qubits, ...])                    | Linearly-controlled X, Y or Z rotation.                 |
| [`PolynomialPauliRotations`](qiskit.circuit.library.PolynomialPauliRotations "qiskit.circuit.library.PolynomialPauliRotations")(\[num\_state\_qubits, ...])        | A circuit implementing polynomial Pauli rotations.      |
| [`PiecewiseLinearPauliRotations`](qiskit.circuit.library.PiecewiseLinearPauliRotations "qiskit.circuit.library.PiecewiseLinearPauliRotations")(\[...])             | Piecewise-linearly-controlled Pauli rotations.          |
| [`PiecewisePolynomialPauliRotations`](qiskit.circuit.library.PiecewisePolynomialPauliRotations "qiskit.circuit.library.PiecewisePolynomialPauliRotations")(\[...]) | Piecewise-polynomially-controlled Pauli rotations.      |
| [`PiecewiseChebyshev`](qiskit.circuit.library.PiecewiseChebyshev "qiskit.circuit.library.PiecewiseChebyshev")(f\_x\[, degree, ...])                                | Piecewise Chebyshev approximation to an input function. |

#### Adders[¶](#adders "Permalink to this headline")

|                                                                                                                                                 |                                                                              |
| ----------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------- |
| [`DraperQFTAdder`](qiskit.circuit.library.DraperQFTAdder "qiskit.circuit.library.DraperQFTAdder")(num\_state\_qubits\[, kind, name])            | A circuit that uses QFT to perform in-place addition on two qubit registers. |
| [`CDKMRippleCarryAdder`](qiskit.circuit.library.CDKMRippleCarryAdder "qiskit.circuit.library.CDKMRippleCarryAdder")(num\_state\_qubits\[, ...]) | A ripple-carry circuit to perform in-place addition on two qubit registers.  |
| [`VBERippleCarryAdder`](qiskit.circuit.library.VBERippleCarryAdder "qiskit.circuit.library.VBERippleCarryAdder")(num\_state\_qubits\[, ...])    | The VBE ripple carry adder \[1].                                             |
| [`WeightedAdder`](qiskit.circuit.library.WeightedAdder "qiskit.circuit.library.WeightedAdder")(\[num\_state\_qubits, weights, name])            | A circuit to compute the weighted sum of qubit registers.                    |

#### Multipliers[¶](#multipliers "Permalink to this headline")

|                                                                                                                                                          |                                                                                    |
| -------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------- |
| [`HRSCumulativeMultiplier`](qiskit.circuit.library.HRSCumulativeMultiplier "qiskit.circuit.library.HRSCumulativeMultiplier")(num\_state\_qubits\[, ...]) | A multiplication circuit to store product of two input registers out-of-place.     |
| [`RGQFTMultiplier`](qiskit.circuit.library.RGQFTMultiplier "qiskit.circuit.library.RGQFTMultiplier")(num\_state\_qubits\[, ...])                         | A QFT multiplication circuit to store product of two input registers out-of-place. |

#### Comparators[¶](#comparators "Permalink to this headline")

|                                                                                                                                               |                     |
| --------------------------------------------------------------------------------------------------------------------------------------------- | ------------------- |
| [`IntegerComparator`](qiskit.circuit.library.IntegerComparator "qiskit.circuit.library.IntegerComparator")(\[num\_state\_qubits, value, ...]) | Integer Comparator. |

#### Functions on binary variables[¶](#functions-on-binary-variables "Permalink to this headline")

|                                                                                                                             |                                                                             |
| --------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------- |
| [`QuadraticForm`](qiskit.circuit.library.QuadraticForm "qiskit.circuit.library.QuadraticForm")(\[num\_result\_qubits, ...]) | Implements a quadratic form on binary variables encoded in qubit registers. |

#### Other arithmetic functions[¶](#other-arithmetic-functions "Permalink to this headline")

|                                                                                                                                           |                  |
| ----------------------------------------------------------------------------------------------------------------------------------------- | ---------------- |
| [`ExactReciprocal`](qiskit.circuit.library.ExactReciprocal "qiskit.circuit.library.ExactReciprocal")(num\_state\_qubits, scaling\[, ...]) | Exact reciprocal |

### Particular Quantum Circuits[¶](#particular-quantum-circuits "Permalink to this headline")

|                                                                                                                                                 |                                                      |
| ----------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------- |
| [`FourierChecking`](qiskit.circuit.library.FourierChecking "qiskit.circuit.library.FourierChecking")(f, g)                                      | Fourier checking circuit.                            |
| [`GraphState`](qiskit.circuit.library.GraphState "qiskit.circuit.library.GraphState")(adjacency\_matrix)                                        | Circuit to prepare a graph state.                    |
| [`HiddenLinearFunction`](qiskit.circuit.library.HiddenLinearFunction "qiskit.circuit.library.HiddenLinearFunction")(adjacency\_matrix)          | Circuit to solve the hidden linear function problem. |
| [`IQP`](qiskit.circuit.library.IQP "qiskit.circuit.library.IQP")(interactions)                                                                  | Instantaneous quantum polynomial (IQP) circuit.      |
| [`QuantumVolume`](qiskit.circuit.library.QuantumVolume "qiskit.circuit.library.QuantumVolume")(num\_qubits\[, depth, seed, ...])                | A quantum volume model circuit.                      |
| [`PhaseEstimation`](qiskit.circuit.library.PhaseEstimation "qiskit.circuit.library.PhaseEstimation")(num\_evaluation\_qubits, unitary)          | Phase Estimation circuit.                            |
| [`GroverOperator`](qiskit.circuit.library.GroverOperator "qiskit.circuit.library.GroverOperator")(oracle\[, state\_preparation, ...])           | The Grover operator.                                 |
| [`PhaseOracle`](qiskit.circuit.library.PhaseOracle "qiskit.circuit.library.PhaseOracle")(expression\[, synthesizer])                            | Phase Oracle.                                        |
| [`EvolvedOperatorAnsatz`](qiskit.circuit.library.EvolvedOperatorAnsatz "qiskit.circuit.library.EvolvedOperatorAnsatz")(\[operators, reps, ...]) | The evolved operator ansatz.                         |
| [`PauliEvolutionGate`](qiskit.circuit.library.PauliEvolutionGate "qiskit.circuit.library.PauliEvolutionGate")(operator\[, time, label, ...])    | Time-evolution of an operator consisting of Paulis.  |

### N-local circuits[¶](#n-local-circuits "Permalink to this headline")

These `BlueprintCircuit` subclasses are used as parameterized models (a.k.a. ansatzes or variational forms) in variational algorithms. They are heavily used in near-term algorithms in e.g. Chemistry, Physics or Optimization.

|                                                                                                                                                |                                                                                        |
| ---------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------- |
| [`NLocal`](qiskit.circuit.library.NLocal "qiskit.circuit.library.NLocal")(\[num\_qubits, rotation\_blocks, ...])                               | The n-local circuit class.                                                             |
| [`TwoLocal`](qiskit.circuit.library.TwoLocal "qiskit.circuit.library.TwoLocal")(\[num\_qubits, rotation\_blocks, ...])                         | The two-local circuit.                                                                 |
| [`PauliTwoDesign`](qiskit.circuit.library.PauliTwoDesign "qiskit.circuit.library.PauliTwoDesign")(\[num\_qubits, reps, seed, ...])             | The Pauli Two-Design ansatz.                                                           |
| [`RealAmplitudes`](qiskit.circuit.library.RealAmplitudes "qiskit.circuit.library.RealAmplitudes")(\[num\_qubits, entanglement, ...])           | The real-amplitudes 2-local circuit.                                                   |
| [`EfficientSU2`](qiskit.circuit.library.EfficientSU2 "qiskit.circuit.library.EfficientSU2")(\[num\_qubits, su2\_gates, ...])                   | The hardware efficient SU(2) 2-local circuit.                                          |
| [`ExcitationPreserving`](qiskit.circuit.library.ExcitationPreserving "qiskit.circuit.library.ExcitationPreserving")(\[num\_qubits, mode, ...]) | The heuristic excitation-preserving wave function ansatz.                              |
| [`QAOAAnsatz`](qiskit.circuit.library.QAOAAnsatz "qiskit.circuit.library.QAOAAnsatz")(\[cost\_operator, reps, ...])                            | A generalized QAOA quantum circuit with a support of custom initial states and mixers. |

### Data encoding circuits[¶](#data-encoding-circuits "Permalink to this headline")

These `BlueprintCircuit` encode classical data in quantum states and are used as feature maps for classification.

|                                                                                                                                        |                                            |
| -------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------ |
| [`PauliFeatureMap`](qiskit.circuit.library.PauliFeatureMap "qiskit.circuit.library.PauliFeatureMap")(\[feature\_dimension, reps, ...]) | The Pauli Expansion circuit.               |
| [`ZFeatureMap`](qiskit.circuit.library.ZFeatureMap "qiskit.circuit.library.ZFeatureMap")(feature\_dimension\[, reps, ...])             | The first order Pauli Z-evolution circuit. |
| [`ZZFeatureMap`](qiskit.circuit.library.ZZFeatureMap "qiskit.circuit.library.ZZFeatureMap")(feature\_dimension\[, reps, ...])          | Second-order Pauli-Z evolution circuit.    |
| [`StatePreparation`](qiskit.circuit.library.StatePreparation "qiskit.circuit.library.StatePreparation")(params\[, num\_qubits, ...])   | Complex amplitude state preparation.       |

### Template circuits[¶](#template-circuits "Permalink to this headline")

Templates are functions that return circuits that compute the identity. They are used at circuit optimization where matching part of the template allows the compiler to replace the match with the inverse of the remainder from the template.

In this example, the identity constant in a template is checked:

```python
from qiskit.circuit.library.templates import template_nct_4b_1
from qiskit.quantum_info import Operator
import numpy as np

template = template_nct_4b_1()

identity = np.identity(2 ** len(template.qubits), dtype=complex)
data = Operator(template).data
np.allclose(data, identity)  # True, template_nct_4b_1 is the identity
```

```python
True
```

#### NCT (Not-CNOT-Toffoli) template circuits[¶](#nct-not-cnot-toffoli-template-circuits "Permalink to this headline")

Template circuits for [`XGate`](qiskit.circuit.library.XGate "qiskit.circuit.library.XGate"), [`CXGate`](qiskit.circuit.library.CXGate "qiskit.circuit.library.CXGate"), and [`CCXGate`](qiskit.circuit.library.CCXGate "qiskit.circuit.library.CCXGate") (Toffoli) gates.

**Reference:** Maslov, D. and Dueck, G. W. and Miller, D. M., Techniques for the synthesis of reversible Toffoli networks, 2007 [http://dx.doi.org/10.1145/1278349.1278355](http://dx.doi.org/10.1145/1278349.1278355)

|                                                                                                                                                           |                                           |
| --------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------- |
| [`templates.nct.template_nct_2a_1`](qiskit.circuit.library.templates.nct.template_nct_2a_1 "qiskit.circuit.library.templates.nct.template_nct_2a_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_2a_2`](qiskit.circuit.library.templates.nct.template_nct_2a_2 "qiskit.circuit.library.templates.nct.template_nct_2a_2")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_2a_3`](qiskit.circuit.library.templates.nct.template_nct_2a_3 "qiskit.circuit.library.templates.nct.template_nct_2a_3")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_4a_1`](qiskit.circuit.library.templates.nct.template_nct_4a_1 "qiskit.circuit.library.templates.nct.template_nct_4a_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_4a_2`](qiskit.circuit.library.templates.nct.template_nct_4a_2 "qiskit.circuit.library.templates.nct.template_nct_4a_2")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_4a_3`](qiskit.circuit.library.templates.nct.template_nct_4a_3 "qiskit.circuit.library.templates.nct.template_nct_4a_3")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_4b_1`](qiskit.circuit.library.templates.nct.template_nct_4b_1 "qiskit.circuit.library.templates.nct.template_nct_4b_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_4b_2`](qiskit.circuit.library.templates.nct.template_nct_4b_2 "qiskit.circuit.library.templates.nct.template_nct_4b_2")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_5a_1`](qiskit.circuit.library.templates.nct.template_nct_5a_1 "qiskit.circuit.library.templates.nct.template_nct_5a_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_5a_2`](qiskit.circuit.library.templates.nct.template_nct_5a_2 "qiskit.circuit.library.templates.nct.template_nct_5a_2")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_5a_3`](qiskit.circuit.library.templates.nct.template_nct_5a_3 "qiskit.circuit.library.templates.nct.template_nct_5a_3")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_5a_4`](qiskit.circuit.library.templates.nct.template_nct_5a_4 "qiskit.circuit.library.templates.nct.template_nct_5a_4")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_6a_1`](qiskit.circuit.library.templates.nct.template_nct_6a_1 "qiskit.circuit.library.templates.nct.template_nct_6a_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_6a_2`](qiskit.circuit.library.templates.nct.template_nct_6a_2 "qiskit.circuit.library.templates.nct.template_nct_6a_2")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_6a_3`](qiskit.circuit.library.templates.nct.template_nct_6a_3 "qiskit.circuit.library.templates.nct.template_nct_6a_3")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_6a_4`](qiskit.circuit.library.templates.nct.template_nct_6a_4 "qiskit.circuit.library.templates.nct.template_nct_6a_4")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_6b_1`](qiskit.circuit.library.templates.nct.template_nct_6b_1 "qiskit.circuit.library.templates.nct.template_nct_6b_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_6b_2`](qiskit.circuit.library.templates.nct.template_nct_6b_2 "qiskit.circuit.library.templates.nct.template_nct_6b_2")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_6c_1`](qiskit.circuit.library.templates.nct.template_nct_6c_1 "qiskit.circuit.library.templates.nct.template_nct_6c_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_7a_1`](qiskit.circuit.library.templates.nct.template_nct_7a_1 "qiskit.circuit.library.templates.nct.template_nct_7a_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_7b_1`](qiskit.circuit.library.templates.nct.template_nct_7b_1 "qiskit.circuit.library.templates.nct.template_nct_7b_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_7c_1`](qiskit.circuit.library.templates.nct.template_nct_7c_1 "qiskit.circuit.library.templates.nct.template_nct_7c_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_7d_1`](qiskit.circuit.library.templates.nct.template_nct_7d_1 "qiskit.circuit.library.templates.nct.template_nct_7d_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_7e_1`](qiskit.circuit.library.templates.nct.template_nct_7e_1 "qiskit.circuit.library.templates.nct.template_nct_7e_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9a_1`](qiskit.circuit.library.templates.nct.template_nct_9a_1 "qiskit.circuit.library.templates.nct.template_nct_9a_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_1`](qiskit.circuit.library.templates.nct.template_nct_9c_1 "qiskit.circuit.library.templates.nct.template_nct_9c_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_2`](qiskit.circuit.library.templates.nct.template_nct_9c_2 "qiskit.circuit.library.templates.nct.template_nct_9c_2")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_3`](qiskit.circuit.library.templates.nct.template_nct_9c_3 "qiskit.circuit.library.templates.nct.template_nct_9c_3")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_4`](qiskit.circuit.library.templates.nct.template_nct_9c_4 "qiskit.circuit.library.templates.nct.template_nct_9c_4")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_5`](qiskit.circuit.library.templates.nct.template_nct_9c_5 "qiskit.circuit.library.templates.nct.template_nct_9c_5")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_6`](qiskit.circuit.library.templates.nct.template_nct_9c_6 "qiskit.circuit.library.templates.nct.template_nct_9c_6")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_7`](qiskit.circuit.library.templates.nct.template_nct_9c_7 "qiskit.circuit.library.templates.nct.template_nct_9c_7")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_8`](qiskit.circuit.library.templates.nct.template_nct_9c_8 "qiskit.circuit.library.templates.nct.template_nct_9c_8")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_9`](qiskit.circuit.library.templates.nct.template_nct_9c_9 "qiskit.circuit.library.templates.nct.template_nct_9c_9")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_10`](qiskit.circuit.library.templates.nct.template_nct_9c_10 "qiskit.circuit.library.templates.nct.template_nct_9c_10")() | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_11`](qiskit.circuit.library.templates.nct.template_nct_9c_11 "qiskit.circuit.library.templates.nct.template_nct_9c_11")() | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9c_12`](qiskit.circuit.library.templates.nct.template_nct_9c_12 "qiskit.circuit.library.templates.nct.template_nct_9c_12")() | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_1`](qiskit.circuit.library.templates.nct.template_nct_9d_1 "qiskit.circuit.library.templates.nct.template_nct_9d_1")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_2`](qiskit.circuit.library.templates.nct.template_nct_9d_2 "qiskit.circuit.library.templates.nct.template_nct_9d_2")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_3`](qiskit.circuit.library.templates.nct.template_nct_9d_3 "qiskit.circuit.library.templates.nct.template_nct_9d_3")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_4`](qiskit.circuit.library.templates.nct.template_nct_9d_4 "qiskit.circuit.library.templates.nct.template_nct_9d_4")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_5`](qiskit.circuit.library.templates.nct.template_nct_9d_5 "qiskit.circuit.library.templates.nct.template_nct_9d_5")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_6`](qiskit.circuit.library.templates.nct.template_nct_9d_6 "qiskit.circuit.library.templates.nct.template_nct_9d_6")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_7`](qiskit.circuit.library.templates.nct.template_nct_9d_7 "qiskit.circuit.library.templates.nct.template_nct_9d_7")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_8`](qiskit.circuit.library.templates.nct.template_nct_9d_8 "qiskit.circuit.library.templates.nct.template_nct_9d_8")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_9`](qiskit.circuit.library.templates.nct.template_nct_9d_9 "qiskit.circuit.library.templates.nct.template_nct_9d_9")()    | **returns**template as a quantum circuit. |
| [`templates.nct.template_nct_9d_10`](qiskit.circuit.library.templates.nct.template_nct_9d_10 "qiskit.circuit.library.templates.nct.template_nct_9d_10")() | **returns**template as a quantum circuit. |

#### Clifford template circuits[¶](#clifford-template-circuits "Permalink to this headline")

Template circuits over Clifford gates.

|                                                                                               |                                           |
| --------------------------------------------------------------------------------------------- | ----------------------------------------- |
| [`clifford_2_1`](qiskit.circuit.library.clifford_2_1 "qiskit.circuit.library.clifford_2_1")() | **returns**template as a quantum circuit. |
| [`clifford_2_2`](qiskit.circuit.library.clifford_2_2 "qiskit.circuit.library.clifford_2_2")() | **returns**template as a quantum circuit. |
| [`clifford_2_3`](qiskit.circuit.library.clifford_2_3 "qiskit.circuit.library.clifford_2_3")() | **returns**template as a quantum circuit. |
| [`clifford_2_4`](qiskit.circuit.library.clifford_2_4 "qiskit.circuit.library.clifford_2_4")() | **returns**template as a quantum circuit. |
| [`clifford_3_1`](qiskit.circuit.library.clifford_3_1 "qiskit.circuit.library.clifford_3_1")() | **returns**template as a quantum circuit. |
| [`clifford_4_1`](qiskit.circuit.library.clifford_4_1 "qiskit.circuit.library.clifford_4_1")() | **returns**template as a quantum circuit. |
| [`clifford_4_2`](qiskit.circuit.library.clifford_4_2 "qiskit.circuit.library.clifford_4_2")() | **returns**template as a quantum circuit. |
| [`clifford_4_3`](qiskit.circuit.library.clifford_4_3 "qiskit.circuit.library.clifford_4_3")() | **returns**template as a quantum circuit. |
| [`clifford_4_4`](qiskit.circuit.library.clifford_4_4 "qiskit.circuit.library.clifford_4_4")() | **returns**template as a quantum circuit. |
| [`clifford_5_1`](qiskit.circuit.library.clifford_5_1 "qiskit.circuit.library.clifford_5_1")() | **returns**template as a quantum circuit. |
| [`clifford_6_1`](qiskit.circuit.library.clifford_6_1 "qiskit.circuit.library.clifford_6_1")() | **returns**template as a quantum circuit. |
| [`clifford_6_2`](qiskit.circuit.library.clifford_6_2 "qiskit.circuit.library.clifford_6_2")() | **returns**template as a quantum circuit. |
| [`clifford_6_3`](qiskit.circuit.library.clifford_6_3 "qiskit.circuit.library.clifford_6_3")() | **returns**template as a quantum circuit. |
| [`clifford_6_4`](qiskit.circuit.library.clifford_6_4 "qiskit.circuit.library.clifford_6_4")() | **returns**template as a quantum circuit. |
| [`clifford_6_5`](qiskit.circuit.library.clifford_6_5 "qiskit.circuit.library.clifford_6_5")() | **returns**template as a quantum circuit. |
| [`clifford_8_1`](qiskit.circuit.library.clifford_8_1 "qiskit.circuit.library.clifford_8_1")() | **returns**template as a quantum circuit. |
| [`clifford_8_2`](qiskit.circuit.library.clifford_8_2 "qiskit.circuit.library.clifford_8_2")() | **returns**template as a quantum circuit. |
| [`clifford_8_3`](qiskit.circuit.library.clifford_8_3 "qiskit.circuit.library.clifford_8_3")() | **returns**template as a quantum circuit. |

#### RZXGate template circuits[¶](#rzxgate-template-circuits "Permalink to this headline")

Template circuits with [`RZXGate`](qiskit.circuit.library.RZXGate "qiskit.circuit.library.RZXGate").

|                                                                                        |                                |
| -------------------------------------------------------------------------------------- | ------------------------------ |
| [`rzx_yz`](qiskit.circuit.library.rzx_yz "qiskit.circuit.library.rzx_yz")(\[theta])    | Template for CX - RYGate - CX. |
| [`rzx_xz`](qiskit.circuit.library.rzx_xz "qiskit.circuit.library.rzx_xz")(\[theta])    | Template for CX - RXGate - CX. |
| [`rzx_cy`](qiskit.circuit.library.rzx_cy "qiskit.circuit.library.rzx_cy")(\[theta])    | Template for CX - RYGate - CX. |
| [`rzx_zz1`](qiskit.circuit.library.rzx_zz1 "qiskit.circuit.library.rzx_zz1")(\[theta]) | Template for CX - RZGate - CX. |
| [`rzx_zz2`](qiskit.circuit.library.rzx_zz2 "qiskit.circuit.library.rzx_zz2")(\[theta]) | Template for CX - RZGate - CX. |
| [`rzx_zz3`](qiskit.circuit.library.rzx_zz3 "qiskit.circuit.library.rzx_zz3")(\[theta]) | Template for CX - RZGate - CX. |
